[package]
name = "coachee"
version = "0.1.0"
authors = ["Jan Mertel <johnny.mert@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7.1"
pwhash = "1.0.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
uuid = "1.2.1"
